<resources>
    <string name="app_name">HorizonRevamped</string>
    <string name="please_select_kzip">Please select the flashable zip of the kernel</string>
    <string name="unable_cleanup">Unable to cleanup the environment</string>
    <string name="unable_copy">Unable to copy file</string>
    <string name="unable_get_exe">Unable to get the executable file</string>
    <string name="unable_flash">Failed when flashing</string>
    <string name="reboot_complete_title">Reboot to complete changes</string>
    <string name="reboot_complete_msg">Would you like to reboot your device now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_reboot">Failed to reboot</string>
    <string name="about">About</string>
    <string name="about_msg">HorizonRevamped Developer: CRZX1337</string>
    <string name="ok">ok</string>
    <string name="main_dev">Developer</string>
    <string name="telegram_group">Telegram Group</string>
    <string name="flash_new">Flash a new file</string>
    <string name="flashing">Flashing</string>
    <string name="flashing_done">Done</string>
    <string name="failed">Failed</string>
    <string name="task_running">A task is still running</string>
    <string name="unable_flash_root">Unable to get root permission</string>
    <string name="unable_flash_error">An error occurred while flashing</string>
    <string name="log_timestamp">[%1$s] %2$s</string>
    <string name="success_screen_title">Flashing Completed!</string>
    <string name="invalid_zip_file">Invalid file! Only AnyKernel3 ZIP files are supported.</string>
    <string name="create_backup">Create Backup</string>
    <string name="restore_backup">Restore Kernel Backup</string>
    <string name="manage_backups">Manage Backups</string>
    <string name="backup_warning">Failed to create backup. Continue anyway?</string>
    <string name="no_backups">No backups available</string>
    <string name="restore_confirm">Are you sure you want to restore the most recent backup?</string>
    <string name="backup_success">Backup created successfully</string>
    <string name="restore_success">Backup restored successfully</string>
    <string name="restore_failed">Failed to restore backup</string>
    <string name="backup_details">Backup Details</string>
    <string name="delete_backup">Delete Backup</string>
    <string name="delete_all_backups">Delete All Backups</string>
    <string name="confirm_delete">Are you sure you want to delete this backup?</string>
    <string name="confirm_delete_all">Are you sure you want to delete all backups?</string>
    <string name="backup_selection_title">Select partitions to backup</string>
    <string name="backup_location_header">Backup Location</string>
    <string name="backup_external_storage">External Storage (sdcard/HorizonRevamped)</string>
    <string name="backup_internal_storage">App Internal Storage</string>
    <string name="backup_complete">Backup completed successfully</string>
    <string name="backup_error">Error creating backup</string>
    <string name="backup_partial_error">Some partitions could not be backed up</string>
    <string name="backup_progress">Creating backup...</string>
    <string name="create_backup_folder_error">Failed to create backup folder</string>
    <string name="storage_permission_required">Storage permission required for external backup</string>
    <string name="unable_process_ongoing">Cannot create backup while a process is ongoing</string>
    <string name="restore_selection_title">Select partitions to restore</string>
    <string name="no_partition_backups">No partition backups found</string>
    <string name="select_backup_folder">Select a backup folder</string>
    <string name="restoring">Restoring partitions...</string>
    <string name="restore_complete">Restore completed successfully</string>
    <string name="restore_partial_error">Some partitions could not be restored</string>
    <string name="browse_backups">Browse Backup Folders</string>
    <string name="select_backup_source">Select Backup Source</string>
    <string name="internal_backups">App Internal Backups</string>
    <string name="external_backups">External Storage Backups</string>
    <string name="backup_storage_location">Backups will be saved to: sdcard/HorizonRevamped/backups/</string>
    <string name="scanning_backups">Scanning for backups…</string>
    <string name="loading_backup_details">Loading backup details…</string>
    <string name="no_backups_found">No backups found</string>
    <string name="backup_summary_header">Backup Summary</string>
    <string name="backup_partitions_header">Partitions</string>
    <string name="restore_confirmation">Restore Confirmation</string>
    <string name="restore_confirmation_message">Are you sure you want to restore the selected partitions?</string>
    <string name="restore">Restore</string>
    <string name="no_partitions_selected">No partitions selected</string>
    <string name="delete_backup_confirmation_title">Delete Backup?</string>
    <string name="delete_backup_confirmation_message">Are you sure you want to delete the backup folder \"%1$s\"? This action cannot be undone.</string>
    <string name="deleting_backup">Deleting backup…</string>
    <string name="backup_deleted">Backup deleted successfully</string>
    <string name="backup_delete_failed">Failed to delete backup folder</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="backup_details_title">Backup Details</string>
    <string name="restore_confirmation_title">Restore Confirmation</string>
    <string name="delete_backup_title">Delete Backup</string>
    <string name="delete_backup_confirmation">Are you sure you want to delete %s?</string>
    <string name="no_backup_details">Failed to load backup details</string>
    <string name="error_showing_backup_details">Error showing backup details</string>
    <string name="no_backup_images">No backup images found</string>
    <string name="grant">Grant</string>
</resources>