<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/flash_new"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/flash_new">
    </item>

    <item
        android:id="@+id/create_backup"
        android:orderInCategory="150"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/create_backup">
    </item>

    <item
        android:id="@+id/restore_backup"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/restore_backup">
    </item>

    <item
        android:id="@+id/manage_backups"
        android:orderInCategory="300" 
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/manage_backups">
    </item>

    <item
        android:id="@+id/about"
        android:orderInCategory="1"
        android:title="@string/about">
    </item>

</menu>