<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_msg"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/dialog_message">

        <Button
            android:id="@+id/btn_telegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/telegram_group" />

        <Button
            android:id="@+id/btn_main_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_dev" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>